add "id" in form

--- a/app/templates/pay.html
+++ b/app/templates/pay.html
@@ -6,7 +6,7 @@
 		<div class="col-md-4">
         </div>
 		<div class="col-md-4">
-			<form name="{{ form.name }}" method="post" action="{{ form.url }}" accept-charset="UTF-8">
+			<form id="form" name="{{ form.name }}" method="post" action="{{ form.url }}" accept-charset="UTF-8">
 				<input type="hidden" name="amount" value="{{ form.amount }}"/>
 				<input type="hidden" name="currency" value="{{ form.currency }}"/>
 				<input type="hidden" name="shop_id" value="{{ form.shop_id }}"/>
