--- a/app/templates/invoice.html
+++ b/app/templates/invoice.html
@@ -6,7 +6,7 @@
 		<div class="col-md-4">
         </div>
 		<div class="col-md-4">
-			<form method="{{ form.method }}" action="{{ form.url }}" accept-charset="UTF-8">
+			<form id="form" method="{{ form.method }}" action="{{ form.url }}" accept-charset="UTF-8">
 				{% with form = form.data %}
 				{% for key, value in form.items() %}
 				<input type="hidden" name="{{ key }}" value="{{ value }}">
