--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,9 +13,11 @@
         <div class="col-md-4">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-            {% for message in messages %}
-            <p>{{ message }}</p>
-            {% endfor %}
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
             {% endif %}
             {% endwith %}
         </div>
